# kiri

./: .gitignore  README.md  flake.nix  kiri.toml  pyproject.toml
.github/workflows/: docker.yaml
kiri/: kiri.py
